# dotfiles

./: flake.nix  pkgsConfig.nix
home/: default.nix
home/hyprland/: default.nix  hypridle.nix  hyprland.conf  hyprlock.nix  hyprpaper.nix  hyprsunset.nix
home/hyprland/modules/: autostart.conf  env.conf  input.conf  keybinding.conf  theme.conf  windows.conf
home/nekoma/: caelestia.nix  default.nix  direnv.nix  git.nix  guiApps.nix  nirishot.nix  packages.nix  terminal.nix  theme.nix  yazi.nix
home/nekoma/browser/: default.nix
home/nekoma/hyprland/: default.nix  hypridle.nix  hyprlock.nix  hyprpaper.nix  hyprshot.nix  hyprsunset.nix
home/nekoma/launcher/: default.nix
home/nekoma/niri/: default.nix  hypridle.nix  hyprlock.nix
home/nekoma/statusbar/: default.nix  style.css
home/programs/: bluetooth.nix  browsers.nix  default.nix  direnv.nix  easyEffects.nix  git.nix  island.nix  media.nix  neovim.nix  recorder.nix  tmux.nix  yazi.nix
home/programs/browser/: default.nix  userChrome.css
home/programs/eww/: default.nix  eww.scss  eww.yuck
home/programs/nvim/: default.nix  init.lua  vimOptions.nix
home/programs/swaync/: config.json  default.nix  style.css
home/programs/waybar/: default.nix  style.css
home/shell/: alacritty.nix  default.nix  starship.nix  zsh.nix
home/walker/: config.toml  default.nix  style.css
home/waybar/: config.jsonc
home/widgets/: .gitignore  Cargo.toml  flake.nix  package.nix
home/widgets/src/: config.rs  island.rs  listener.rs  main.rs  media.rs  notification.rs  spring.rs
home/widgets/src/view/: dashboard.rs  mod.rs  music.rs  notification.rs  osd.rs
hosts/astral/: default.nix  hardware-configuration.nix
modules/: bluetooth.nix  desktop.nix  fonts.nix  i18n.nix  nvidia.nix  polkit-agent.nix  system.nix
modules/greeters/: ly.nix  sddm.nix  tuigreet.nix
modules/home/blueprint/: x555uj.nix
modules/home/browser/: firefox.nix
modules/home/launcher/: walker.nix
modules/home/shell/: zsh.nix
modules/home/statusbar/: waybar.nix
modules/home/theme/: gtk.nix
modules/nvidia/: legacy470.nix
(+36 files in other folders)
